--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.application.name=productInventorySystem
 
 spring.datasource.url = jdbc:mysql://localhost:3306/product_inventory_system
-spring.datasource.username = root
+spring.datasource.username = anik
 spring.datasource.password = 4922
 
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql = true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
