--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 spring.application.name=productInventorySystem
 
+spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:product_inventory_system}
+spring.datasource.username=${DB_USER:anik}
+spring.datasource.password=${DB_PASS:4922}
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
-# IMPORTANT: makes Railway work (Railway provides PORT)
+
 server.port=${PORT:8080}
 
-# Choose profile (default dev so local works automatically)
-spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
-
-# CORS (we'll use this in config)
 app.allowed-origins=${ALLOWED_ORIGINS:http://localhost:5173}
